--- a/competition/index.html
+++ b/competition/index.html
@@ -12,8 +12,10 @@
     <meta property="og:type" content="website" />
     <meta name="author" content="Dániel (@GeneralsCamp)">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        crossorigin="anonymous" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
+        rel="stylesheet" />
     <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
     <link rel="stylesheet" href="styles.css" />
 </head>
@@ -43,22 +45,24 @@
 
             <div class="mb-3 text-center col-12">
                 <label for="serverSelect" class="form-label">Szerver</label>
-                <select id="serverSelect" class="form-select custom-select input-responsive mx-auto text-center" disabled>
+                <select id="serverSelect" class="form-select custom-select input-responsive mx-auto text-center"
+                    disabled>
                     <option value="">Előbb válassz játékot</option>
                 </select>
             </div>
             <div class="mb-3 text-center col-12">
                 <label for="playerName" class="form-label">Játékosnév</label>
-                <input type="text" class="form-control custom-input input-responsive mx-auto text-center" id="playerName"
-                    placeholder="Ide írd a játékosneved!" required />
+                <input type="text" class="form-control custom-input input-responsive mx-auto text-center"
+                    id="playerName" placeholder="Ide írd a játékosneved!" required />
             </div>
             <div class="mb-3 text-center col-12">
                 <label for="discordServer" class="form-label">Discord név</label>
-                <input type="text" class="form-control custom-input input-responsive mx-auto text-center" id="discordServer"
-                    placeholder="Ide írd a Discord neved!" required />
+                <input type="text" class="form-control custom-input input-responsive mx-auto text-center"
+                    id="discordServer" placeholder="Ide írd a Discord neved!" required />
             </div>
             <div class="d-flex justify-content-center col-12">
-                <button id="startBtn" class="btn btn-warning btn-fixed">Indítás</button>
+                <button id="startBtn" class="btn btn-warning btn-fixed me-2">Indítás</button>
+                <a href="./rankings/index.html" class="btn btn-primary btn-fixed ms-2">Ranglista</a>
             </div>
         </div>
 
