--- a/brewery_simulator/index.html
+++ b/brewery_simulator/index.html
@@ -400,35 +400,8 @@
                   </select>
                 </div>
                 <div class="col-md-3 col-6 col-sm-4 col-lg-3 form-group">
-                  <label for="cast">Castellan Bonus</label>
-                  <select class="form-select" name="cast" id="cast">
-                    <option value="0">No</option>
-                    <option value="0.01">1%</option>
-                    <option value="0.02">2%</option>
-                    <option value="0.03">3%</option>
-                    <option value="0.04">4%</option>
-                    <option value="0.05">5%</option>
-                    <option value="0.06">6%</option>
-                    <option value="0.07">7%</option>
-                    <option value="0.08">8%</option>
-                    <option value="0.09">9%</option>
-                    <option value="0.10">10%</option>
-                    <option value="0.11">11%</option>
-                    <option value="0.12">12%</option>
-                    <option value="0.13">13%</option>
-                    <option value="0.14">14%</option>
-                    <option value="0.15">15%</option>
-                    <option value="0.16">16%</option>
-                    <option value="0.17">17%</option>
-                    <option value="0.18">18%</option>
-                    <option value="0.19">19%</option>
-                    <option value="0.20">20%</option>
-                    <option value="0.21">21%</option>
-                    <option value="0.22">22%</option>
-                    <option value="0.23">23%</option>
-                    <option value="0.24">24%</option>
-                    <option value="0.25">25%</option>
-                  </select>
+                  <label for="cast">Castellan Bonus (%)</label>
+                  <input type="number" id="cast" name="cast" class="form-control" min="0" max="25" step="0.1" value="0">
                 </div>
                 <div class="col-md-3 col-6 col-sm-4 col-lg-3 form-group">
                   <label for="">Effect deco</label>
